--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "webpack"
+    "dist": "gulp build --production"
   },
   "author": "Yuki Nose",
   "browserslist": [
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.12",
+    "crypto": "^1.0.1",
     "css-declaration-sorter": "^5.1.2",
     "css-loader": "^5.0.0",
     "gulp": "^4.0.2",
